fix(progress-bar): background overflow

--- a/24_scroll-progress/css/index.css
+++ b/24_scroll-progress/css/index.css
@@ -48,7 +48,7 @@ body {
 nav {
   position: fixed;
 
-  width: 100%;
+  width: 100vw;
   height: 50px;
   line-height: 50px;
   background-color: #343434;
@@ -56,6 +56,7 @@ nav {
   display: flex;
   align-items: center;
 }
+
 nav a {
   flex: 1;
   
@@ -70,11 +71,9 @@ nav a {
 nav::after {
   content: "";
   position: absolute;
-  top: 0;
-  left: 0;
-  
   z-index: -1;
-  width: 20%;
+
+  width: 20vw;
   height: 100%;
   background: linear-gradient(
     90deg, 
@@ -158,7 +157,8 @@ div.section {
     content: "";
   }
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 576px) {
   html {
     font-size: 10px;
   }
